freelancer-k8s/minikube/00-frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freelancer-frontend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freelancer-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: freelancer-frontend
    spec:
      containers:
        - name: freelancer-frontend
          image: kreative358/freelancer-frontend:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: frontend
              containerPort: 80
