freelancer-k8s/minikube/00-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelancer-frontend
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: freelancer-frontend
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
      protocol: TCP
