freelancer-k8s/minikube/00-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freelancer-frontend-ingress
  namespace: production
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: freelancer-frontend
      port:
        number: 80
  tls:
    - hosts:
        - freelancerapp.info
      secretName: frontend-ingress-tls
  rules:
    - host: freelancerapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freelancer-frontend
                port:
                  number: 80
